css/style.css
body {
    margin: 0;
    padding: 0
}

.container {
    width: 90%;
    max-width: 70%;
    margin: 1rem auto;

}

.cabezera {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: red;
    border-radius: 10px 10px 0 0;
    border: 2px solid #ccc;
}

.cabezera__contenido {
    display: flex;
    flex-direction: row;
    align-items: center;
    font-weight: 600;
    color: white;
    gap: 0.3rem;
    padding: 0.5rem 0;

}

.cabezera__logo {
    width: 2rem;
    height: 2rem;
    border-radius: 50%;
    margin-left: 1rem;
}

.principal {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: rgb(223, 169, 70);
    padding: 1rem;
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    border: 2px solid #ccc;
}

.principal__title-pokemon {
    display: flex;
    align-items: center;
    background-color: white;
    border-radius: 0.5rem;
    padding: 0.5rem 1.9rem;


}

.principal h2 {
    font-size: 1.5rem;
    font-weight: bold;
    text-align: center;
    margin: 0;

}

.principal__pokemon {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.principal__pokemon img:nth-child(2) {
    width: 14rem;
    filter: brightness(0);
    transition: filter 0.5s;
    margin-bottom: -2rem;

}

.principal__logo {
    width: 2rem;
    height: 1.9rem;
}

.principal__info-pokemon {
    background-color: white;
    border-radius: 2rem;
    width: 80%;
    max-width: 20rem;
    display: grid;
    grid-template-columns: 1;
    padding: 0.5rem;
    margin-bottom: 1rem;
    line-height: 0.5rem;
    color: gray;
}

.principal__info-pokemon div {
    display: flex;
    justify-content: space-around;
}

.footer {
    background-color: white;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 1rem;
    border-radius: 2rem;

    margin-bottom: 1rem;
    border: 2px solid #ccc;
    border-radius: 0 0 10px 10px;
}

.footer h2 {
    font-weight: 600;
    color: rgb(223, 169, 70);
}

.footer__others {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 3rem;
}

.footer__others div {
    background-color: rgb(223, 169, 70);
    border-radius: 0.5rem;
    padding: 0.5rem;
    cursor: pointer;
    transition: all 0.5s;
}

.footer__others img {
    width: 5rem;
    height: 5rem;
    border-radius: 50%;
    filter: brightness(0);

}

.footer__others div:hover {
    transform: scale(1.1);
    background-color: rgb(161, 134, 83);

}




/* 578 */
@media (min-width: 934px) {

    body {
        margin: 0 auto;
    }

    .cabezera {
        justify-content: start;
        /* espaciado a la izquierda */
    }

    .principal {
        flex-direction: row;
        justify-content: space-around;
    }


    .principal__info-pokemon {

        width: 40%;
        grid-template-columns: repeat(2, 1fr);
        gap: 2rem;
        line-height: 0rem;
        padding: 1rem;
        text-align: center;
    }

    .principal__info-pokemon div {

        flex-direction: column;
    }

    .footer {
        flex-direction: row;
        justify-content: space-around;
    }

    .footer__others {
        grid-template-columns: repeat(4, 1fr);

    }
}

/* 1192 */

